--- a/Nedeljni1_Andreja_Kolesar/App.xaml
+++ b/Nedeljni1_Andreja_Kolesar/App.xaml
@@ -2,8 +2,17 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Nedeljni1_Andreja_Kolesar"
-             StartupUri="MainWindow.xaml">
+             StartupUri="View/Login.xaml">
     <Application.Resources>
-         
+        <ControlTemplate x:Key="textBoxErrorTemplate">
+            <StackPanel>
+                <Border BorderBrush="Red"
+                        BorderThickness="1">
+                    <AdornedElementPlaceholder Name="a" />
+                </Border>
+                <TextBlock Foreground="Red"
+                           Text="{Binding [0].ErrorContent}" />
+            </StackPanel>
+        </ControlTemplate>
     </Application.Resources>
 </Application>
