EF added, Get Lists in Service class implemented

--- a/Nedeljni1_Andreja_Kolesar/View/Registration.xaml
+++ b/Nedeljni1_Andreja_Kolesar/View/Registration.xaml
@@ -46,7 +46,7 @@
                    VerticalAlignment="Top"
                    Width="90" />
             <TextBox x:Name="txtFirstName"
-                     Text="{Binding newUser.fullname, UpdateSourceTrigger=PropertyChanged}"
+                     Text="{Binding newUser.firstname, UpdateSourceTrigger=PropertyChanged}"
                      HorizontalAlignment="Left"
                      Height="18"
                      Margin="240,80,0,0"
@@ -54,7 +54,7 @@
                      VerticalAlignment="Top"
                      Width="200" />
             <TextBox x:Name="txtLastName"
-                     Text="{Binding newUser.fullname, UpdateSourceTrigger=PropertyChanged}"
+                     Text="{Binding newUser.lastname, UpdateSourceTrigger=PropertyChanged}"
                      HorizontalAlignment="Left"
                      Height="18"
                      Margin="240,120,0,0"
@@ -76,7 +76,7 @@
                      VerticalAlignment="Top"
                      Width="200">
                 <TextBox.Text>
-                    <Binding Path="newUser.JMBG"
+                    <Binding Path="newUser.jmbg"
                              UpdateSourceTrigger="PropertyChanged"
                              ValidatesOnDataErrors="True"
                              NotifyOnValidationError="True">
@@ -93,7 +93,7 @@
                    VerticalAlignment="Top"
                    Width="90" />
             <TextBox x:Name="txtResidence"
-                     Validation.ErrorTemplate="{StaticResource textBoxErrorTemplate}"
+                     Text="{Binding newUser.residence, UpdateSourceTrigger=PropertyChanged}"
                      HorizontalAlignment="Left"
                      Height="18"
                      Margin="240,202,0,0"
@@ -151,20 +151,20 @@
                    Width="85" />
             <ComboBox HorizontalAlignment="Left"
                       x:Name="cmbGender"
-                      DisplayMemberPath="fullname"
+                      DisplayMemberPath="symbol"
                       IsEditable="True"
-                      ItemsSource="{Binding doctorList, UpdateSourceTrigger=PropertyChanged}"
-                      SelectedItem="{Binding selectedDoctor, UpdateSourceTrigger=PropertyChanged}"
+                      ItemsSource="{Binding genderList, UpdateSourceTrigger=PropertyChanged}"
+                      SelectedItem="{Binding selectedGender, UpdateSourceTrigger=PropertyChanged}"
                       Height="18"
                       Margin="240,322,0,0"
                       VerticalAlignment="Top"
                       Width="200" />
             <ComboBox HorizontalAlignment="Left"
                       x:Name="cmbMarital"
-                      DisplayMemberPath="fullname"
+                      DisplayMemberPath="status"
                       IsEditable="True"
-                      ItemsSource="{Binding doctorList, UpdateSourceTrigger=PropertyChanged}"
-                      SelectedItem="{Binding selectedDoctor, UpdateSourceTrigger=PropertyChanged}"
+                      ItemsSource="{Binding maritalList, UpdateSourceTrigger=PropertyChanged}"
+                      SelectedItem="{Binding selectedMarital, UpdateSourceTrigger=PropertyChanged}"
                       Height="18"
                       Margin="240,360,0,0"
                       VerticalAlignment="Top"
@@ -181,10 +181,10 @@
                    Width="85" />
             <ComboBox HorizontalAlignment="Left"
                       x:Name="cmbSector"
-                      DisplayMemberPath="fullname"
+                      DisplayMemberPath="name"
                       IsEditable="True"
-                      ItemsSource="{Binding doctorList, UpdateSourceTrigger=PropertyChanged}"
-                      SelectedItem="{Binding selectedDoctor, UpdateSourceTrigger=PropertyChanged}"
+                      ItemsSource="{Binding sectorList, UpdateSourceTrigger=PropertyChanged}"
+                      SelectedItem="{Binding selectedSector, UpdateSourceTrigger=PropertyChanged}"
                       Height="18"
                       Margin="240,400,0,0"
                       VerticalAlignment="Top"
@@ -197,10 +197,10 @@
                    Width="85" />
             <ComboBox HorizontalAlignment="Left"
                       x:Name="cmbPosition"
-                      DisplayMemberPath="fullname"
+                      DisplayMemberPath="name"
                       IsEditable="True"
-                      ItemsSource="{Binding doctorList, UpdateSourceTrigger=PropertyChanged}"
-                      SelectedItem="{Binding selectedDoctor, UpdateSourceTrigger=PropertyChanged}"
+                      ItemsSource="{Binding positionList, UpdateSourceTrigger=PropertyChanged}"
+                      SelectedItem="{Binding selectedPosition, UpdateSourceTrigger=PropertyChanged}"
                       Height="18"
                       Margin="240,440,0,0"
                       VerticalAlignment="Top"
@@ -213,7 +213,7 @@
                    Width="95"
                    RenderTransformOrigin="0.368,0.4" />
             <TextBox x:Name="txtYearsOfService"
-                     Text="{Binding newUser.password, UpdateSourceTrigger=PropertyChanged}"
+                     Text="{Binding newEmployee.yearsOfService, UpdateSourceTrigger=PropertyChanged}"
                      HorizontalAlignment="Left"
                      Height="18"
                      Margin="240,480,0,0"
@@ -229,10 +229,10 @@
                    RenderTransformOrigin="0.368,0.4" />
             <ComboBox HorizontalAlignment="Left"
                       x:Name="cmbQualifications"
-                      DisplayMemberPath="fullname"
+                      DisplayMemberPath="symbol"
                       IsEditable="True"
-                      ItemsSource="{Binding doctorList, UpdateSourceTrigger=PropertyChanged}"
-                      SelectedItem="{Binding selectedDoctor, UpdateSourceTrigger=PropertyChanged}"
+                      ItemsSource="{Binding qualificationList, UpdateSourceTrigger=PropertyChanged}"
+                      SelectedItem="{Binding selectedQualification, UpdateSourceTrigger=PropertyChanged}"
                       Height="18"
                       Margin="240,522,0,0"
                       VerticalAlignment="Top"
@@ -254,7 +254,7 @@
                    VerticalAlignment="Top"
                    Width="85" />
             <TextBox x:Name="txtMail"
-                     Text="{Binding newUser.password, UpdateSourceTrigger=PropertyChanged}"
+                     Text="{Binding newManager.email, UpdateSourceTrigger=PropertyChanged}"
                      HorizontalAlignment="Left"
                      Height="18"
                      Margin="240,400,0,0"
@@ -268,7 +268,7 @@
                    VerticalAlignment="Top"
                    Width="85" />
             <TextBox x:Name="txtHint"
-                     Text="{Binding newUser.password, UpdateSourceTrigger=PropertyChanged}"
+                     Text="{Binding newManager.backupPassword, UpdateSourceTrigger=PropertyChanged}"
                      HorizontalAlignment="Left"
                      Height="18"
                      Margin="240,440,0,0"
@@ -283,7 +283,7 @@
                    Width="115"
                    RenderTransformOrigin="0.368,0.4" />
             <TextBox x:Name="txtProjects"
-                     Text="{Binding newUser.password, UpdateSourceTrigger=PropertyChanged}"
+                     Text="{Binding newManager.successfulProjects, UpdateSourceTrigger=PropertyChanged}"
                      HorizontalAlignment="Left"
                      Height="18"
                      Margin="240,480,0,0"
@@ -298,7 +298,7 @@
                    Width="95"
                    RenderTransformOrigin="0.368,0.4" />
             <TextBox x:Name="txtOffice"
-                     Text="{Binding newUser.password, UpdateSourceTrigger=PropertyChanged}"
+                     Text="{Binding newManager.officeNumber, UpdateSourceTrigger=PropertyChanged}"
                      HorizontalAlignment="Left"
                      Height="18"
                      Margin="240,522,0,0"
