--- a/Nedeljni1_Andreja_Kolesar/View/Login.xaml
+++ b/Nedeljni1_Andreja_Kolesar/View/Login.xaml
@@ -36,7 +36,7 @@
                      TextWrapping="Wrap"
                      VerticalAlignment="Top"
                      Width="235"
-                     Text="{Binding currentUser.username, UpdateSourceTrigger=PropertyChanged}" />
+                     Text="{Binding person.username, UpdateSourceTrigger=PropertyChanged}" />
             <PasswordBox x:Name="passwordBox"
                          HorizontalAlignment="Left"
                          Margin="165,140,0,0"
