--- a/Nedeljni1_Andreja_Kolesar/View/Owner.xaml
+++ b/Nedeljni1_Andreja_Kolesar/View/Owner.xaml
@@ -7,6 +7,11 @@
         mc:Ignorable="d"
         Title="Owner" Height="450" Width="800">
     <Grid>
-        
+        <Button Content="Create administrator"
+                Command="{Binding registration, UpdateSourceTrigger=PropertyChanged}"
+                HorizontalAlignment="Left"
+                Margin="80,30,0,0"
+                VerticalAlignment="Top"
+                Width="135" />
     </Grid>
 </Window>
