owner functionalities implemented

--- a/Nedeljni1_Andreja_Kolesar/View/Owner.xaml
+++ b/Nedeljni1_Andreja_Kolesar/View/Owner.xaml
@@ -10,8 +10,54 @@
         <Button Content="Create administrator"
                 Command="{Binding registration, UpdateSourceTrigger=PropertyChanged}"
                 HorizontalAlignment="Left"
-                Margin="80,30,0,0"
+                Margin="60,40,0,0"
                 VerticalAlignment="Top"
-                Width="135" />
+                Width="140" />
+      
+        <DataGrid Name="DataGridAllAdmins"
+                  ItemsSource="{Binding adminList, UpdateSourceTrigger=PropertyChanged}"
+                  SelectedItem="{Binding admin, UpdateSourceTrigger=PropertyChanged}"
+                  Visibility="{Binding viewAdmins, UpdateSourceTrigger=PropertyChanged}"
+                  IsReadOnly="True"
+                  HeadersVisibility="Column"
+                  AutoGenerateColumns="False"
+                  HorizontalGridLinesBrush="Black"
+                  BorderBrush="Black"
+                  Foreground="Black"
+                  FontWeight="Bold"
+                  Margin="45,121,37,49">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Firstname"
+                                    Binding="{Binding firstname}" />
+                <DataGridTextColumn Header="Lastname"
+                                    Binding="{Binding lastname}" />
+                <DataGridTextColumn Header="Jmbg"
+                                    Binding="{Binding jmbg}" />
+                <DataGridTextColumn Header="Type"
+                                    Binding="{Binding typeName}" />
+                <DataGridTextColumn Header="Expiry date"
+                                    Binding="{Binding expiryDate}" />
+                <DataGridTextColumn Header="Username"
+                                    Binding="{Binding username}" />
+                <DataGridTemplateColumn>
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Button Name="btnEditUser"
+                                    Content="Edit"
+                                    Command="{Binding DataContext.edit, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}"
+                                    Margin="4"
+                                    FontWeight="Bold" />
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+            </DataGrid.Columns>
+        </DataGrid>
+        <Label Content="ADMINISTRATORS:"
+               HorizontalAlignment="Left"
+               Margin="60,80,0,0"
+               VerticalAlignment="Top"
+               Width="160"
+               FontWeight="Bold"
+               FontSize="14" />
     </Grid>
 </Window>
