--- a/Nedeljni1_Andreja_Kolesar/View/Owner.xaml
+++ b/Nedeljni1_Andreja_Kolesar/View/Owner.xaml
@@ -7,6 +7,13 @@
         mc:Ignorable="d"
         Title="Owner" Height="450" Width="800">
     <Grid>
+        <Button Content="Log Out"
+                Command="{Binding logOut, UpdateSourceTrigger=PropertyChanged}"
+                HorizontalAlignment="Left"
+                Height="20"
+                Margin="560,40,0,0"
+                VerticalAlignment="Top"
+                Width="140" />
         <Button Content="Create administrator"
                 Command="{Binding registration, UpdateSourceTrigger=PropertyChanged}"
                 HorizontalAlignment="Left"
