--- a/Nedeljni1_Andreja_Kolesar/View/AddPosition.xaml
+++ b/Nedeljni1_Andreja_Kolesar/View/AddPosition.xaml
@@ -1,11 +1,12 @@
 ﻿<Window x:Class="Nedeljni1_Andreja_Kolesar.View.AddPosition"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:Validation="clr-namespace:Nedeljni1_Andreja_Kolesar.Validation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Nedeljni1_Andreja_Kolesar.View"
         mc:Ignorable="d"
-        Title="AddPosition" Height="450" Width="800">
+        Title="AddPosition" Height="300" Width="500">
     <Grid>
         <Label Content="Position name:"
                HorizontalAlignment="Left"
@@ -19,21 +20,32 @@
                 VerticalAlignment="Top"
                 Width="75" />
         <TextBox HorizontalAlignment="Left"
-                 Text="{Binding position.name, UpdateSourceTrigger=PropertyChanged}"
+                 Validation.ErrorTemplate="{StaticResource textBoxErrorTemplate}"
                  Height="23"
                  Margin="220,53,0,0"
                  TextWrapping="Wrap"
                  VerticalAlignment="Top"
-                 Width="157" />
+                 Width="157" >
+            <TextBox.Text>
+                <Binding Path="position.name"
+                         UpdateSourceTrigger="PropertyChanged"
+                         ValidatesOnDataErrors="True"
+                         NotifyOnValidationError="True">
+                    <Binding.ValidationRules>
+                        <Validation:ValidPositionName />
+                    </Binding.ValidationRules>
+                </Binding>
+            </TextBox.Text>
+        </TextBox>
         <Label Content="Position description:"
                HorizontalAlignment="Left"
                VerticalAlignment="Top"
-               Margin="105,90,0,0"
+               Margin="105,98,0,0"
                Width="125" />
         <TextBox HorizontalAlignment="Left"
                  Text="{Binding position.description, UpdateSourceTrigger=PropertyChanged}"
                  Height="23"
-                 Margin="220,90,0,0"
+                 Margin="220,98,0,0"
                  TextWrapping="Wrap"
                  VerticalAlignment="Top"
                  Width="157" />
