--- a/Nedeljni1_Andreja_Kolesar/View/AddSector.xaml
+++ b/Nedeljni1_Andreja_Kolesar/View/AddSector.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:Validation="clr-namespace:Nedeljni1_Andreja_Kolesar.Validation"
         xmlns:local="clr-namespace:Nedeljni1_Andreja_Kolesar.View"
         mc:Ignorable="d"
         Title="AddSector" Height="300" Width="500">
@@ -19,21 +20,32 @@
                 VerticalAlignment="Top"
                 Width="75" />
         <TextBox HorizontalAlignment="Left"
-                 Text="{Binding sector.name, UpdateSourceTrigger=PropertyChanged}"
+                 Validation.ErrorTemplate="{StaticResource textBoxErrorTemplate}"
                  Height="23"
                  Margin="220,53,0,0"
                  TextWrapping="Wrap"
                  VerticalAlignment="Top"
-                 Width="157" />
+                 Width="157">
+            <TextBox.Text>
+                <Binding Path="sector.name"
+                         UpdateSourceTrigger="PropertyChanged"
+                         ValidatesOnDataErrors="True"
+                         NotifyOnValidationError="True">
+                    <Binding.ValidationRules>
+                        <Validation:ValidSectorName />
+                    </Binding.ValidationRules>
+                </Binding>
+            </TextBox.Text>
+        </TextBox>
         <Label Content="Sector description:"
                HorizontalAlignment="Left"
                VerticalAlignment="Top"
-               Margin="105,90,0,0"
+               Margin="105,99,0,0"
                Width="110" />
         <TextBox HorizontalAlignment="Left"
                  Text="{Binding sector.description, UpdateSourceTrigger=PropertyChanged}"
                  Height="23"
-                 Margin="220,90,0,0"
+                 Margin="220,102,0,0"
                  TextWrapping="Wrap"
                  VerticalAlignment="Top"
                  Width="157" />
