--- a/Nedeljni1_Andreja_Kolesar/View/AssignLevel.xaml
+++ b/Nedeljni1_Andreja_Kolesar/View/AssignLevel.xaml
@@ -1,5 +1,6 @@
 ﻿<Window x:Class="Nedeljni1_Andreja_Kolesar.View.AssignLevel"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:Validation="clr-namespace:Nedeljni1_Andreja_Kolesar.Validation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -19,11 +20,22 @@
                 VerticalAlignment="Top"
                 Width="75" />
         <TextBox HorizontalAlignment="Left"
-                 Text="{Binding editManager.levelOfResponsibility, UpdateSourceTrigger=PropertyChanged}"
+                 Validation.ErrorTemplate="{StaticResource textBoxErrorTemplate}"
                  Height="23"
                  Margin="263,56,0,0"
                  TextWrapping="Wrap"
                  VerticalAlignment="Top"
-                 Width="120" />
+                 Width="120">
+            <TextBox.Text>
+                <Binding Path="editManager.levelOfResponsibility"
+                         UpdateSourceTrigger="PropertyChanged"
+                         ValidatesOnDataErrors="True"
+                         NotifyOnValidationError="True">
+                    <Binding.ValidationRules>
+                        <Validation:ValidLevel/>
+                    </Binding.ValidationRules>
+                </Binding>
+            </TextBox.Text>
+        </TextBox>
     </Grid>
 </Window>
