Update AdminList, do not allow login if exipiry date has expired

--- a/Nedeljni1_Andreja_Kolesar/View/Registration.xaml
+++ b/Nedeljni1_Andreja_Kolesar/View/Registration.xaml
@@ -155,7 +155,7 @@
             <ComboBox HorizontalAlignment="Left"
                       x:Name="cmbGender"
                       DisplayMemberPath="symbol"
-                      IsEditable="True"
+                      IsEditable="False"
                       ItemsSource="{Binding genderList, UpdateSourceTrigger=PropertyChanged}"
                       SelectedItem="{Binding selectedGender, UpdateSourceTrigger=PropertyChanged}"
                       Height="20"
@@ -165,7 +165,7 @@
             <ComboBox HorizontalAlignment="Left"
                       x:Name="cmbMarital"
                       DisplayMemberPath="status"
-                      IsEditable="True"
+                      IsEditable="False"
                       ItemsSource="{Binding maritalList, UpdateSourceTrigger=PropertyChanged}"
                       SelectedItem="{Binding selectedMarital, UpdateSourceTrigger=PropertyChanged}"
                       Height="20"
