--- a/Nedeljni1_Andreja_Kolesar/View/RegistrationAdministrator.xaml
+++ b/Nedeljni1_Andreja_Kolesar/View/RegistrationAdministrator.xaml
@@ -7,7 +7,7 @@
         xmlns:local="clr-namespace:Nedeljni1_Andreja_Kolesar.View"
         mc:Ignorable="d"
         Title="RegistrationAdministrator"
-        Height="700"
+        Height="600"
         Width="600">
     <Grid>
         <Button Content="Close"
@@ -138,7 +138,7 @@
         <ComboBox HorizontalAlignment="Left"
                   x:Name="cmbGender"
                   DisplayMemberPath="symbol"
-                  IsEditable="True"
+                  IsEditable="False"
                   ItemsSource="{Binding genderList, UpdateSourceTrigger=PropertyChanged}"
                   SelectedItem="{Binding selectedGender, UpdateSourceTrigger=PropertyChanged}"
                   Height="20"
@@ -148,7 +148,7 @@
         <ComboBox HorizontalAlignment="Left"
                   x:Name="cmbMarital"
                   DisplayMemberPath="status"
-                  IsEditable="True"
+                  IsEditable="False"
                   ItemsSource="{Binding maritalList, UpdateSourceTrigger=PropertyChanged}"
                   SelectedItem="{Binding selectedMarital, UpdateSourceTrigger=PropertyChanged}"
                   Height="20"
@@ -164,7 +164,7 @@
         <ComboBox HorizontalAlignment="Left"
                   x:Name="cmbAdminType"
                   DisplayMemberPath="name"
-                  IsEditable="True"
+                  IsEditable="False"
                   ItemsSource="{Binding typeList, UpdateSourceTrigger=PropertyChanged}"
                   SelectedItem="{Binding selectedType, UpdateSourceTrigger=PropertyChanged}"
                   Height="20"
